tests/snapshots/snapshot_tests__array_init_pair_symmetr4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_pair_symmetr4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 Z Z) Z) Z)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) i+0) x+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 Z Z) Z) Z)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 i+0)) i+0) (* x+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int c+0 i+0 (- (Read_Int_Int b+0 i+0) (Read_Int_Int a+0 i+0))) i+0) (- (Read_Int_Int b+0 i+0) (Read_Int_Int a+0 i+0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 i+0)) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 i+0)) 2) (Read_Int_Int b+0 2)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 i+0)) N) (Read_Int_Int b+0 N)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int c+0 0 (- (+ Z Z))) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= Z N)) (= (Read_Int_Int (Write_Int_Int c+0 N 0) Z) (Read_Int_Int c+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 i+0)) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int c+0 i+0 (- (Read_Int_Int b+0 i+0) (Read_Int_Int a+0 i+0))) Z) (Read_Int_Int c+0 Z)))",
    ],
}
