tests/snapshots/snapshot_tests__array_init_symmetr_swap_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_symmetr_swap_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (Read_Int_Int b+0 i+0) (- 1))) i+0) (* (Read_Int_Int b+0 i+0) (- 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) i+0) x+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) i+0) (* x+0 (- 1)))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 i+0)) i+0) (Read_Int_Int a+0 i+0))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) N) (Read_Int_Int b+0 N)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int a+0 0 (- 25906)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int a+2 0 x+0) Z) (Read_Int_Int a+2 Z)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int b+0 0 6) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int b+2 0 (* x+0 (- 1))) Z) (Read_Int_Int b+2 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (Read_Int_Int b+0 i+0) (- 1))) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 x+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (* x+0 (- 1))) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (Read_Int_Int a+0 i+0)) Z) (Read_Int_Int b+0 Z)))",
    ],
}
