tests/snapshots/snapshot_tests__array_init_tuples.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_tuples.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 5) (+ i+0 1)) (+ i+0 5)) (+ i+0 1))",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 4)) (+ i+0 2))",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 3)) (+ i+0 3))",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 2)) (+ i+0 4))",
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 1)) (+ i+0 5))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) i+0) (+ i+0 6))",
        "(=> (not (= 0 (+ i+0 3))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) 0) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) 0)))",
        "(=> (not (= 0 (+ i+0 5))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 5) (+ i+0 1)) 0) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) 0)))",
        "(=> (not (= 1 (+ i+0 3))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) 1) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) 1)))",
        "(=> (not (= 1 (+ i+0 5))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 5) (+ i+0 1)) 1) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) 1)))",
        "(=> (not (= 2 (+ i+0 3))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) 2) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) 2)))",
        "(=> (not (= 2 (+ i+0 5))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 5) (+ i+0 1)) 2) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) 2)))",
        "(=> (not (= 3 (+ i+0 5))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 5) (+ i+0 1)) 3) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) 3)))",
        "(=> (not (= 4 (+ i+0 3))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) 4) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) 4)))",
        "(=> (not (= 4 (+ i+0 5))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 5) (+ i+0 1)) 4) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) 4)))",
        "(=> (not (= Z (+ i+0 1))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) Z) (Read_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) Z)))",
        "(=> (not (= Z (+ i+0 2))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) Z) (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) Z)))",
        "(=> (not (= Z (+ i+0 3))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) Z) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) Z)))",
        "(=> (not (= Z (+ i+0 4))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) Z) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) Z)))",
        "(=> (not (= Z (+ i+0 5))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) (+ i+0 5) (+ i+0 1)) Z) (Read_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) (+ i+0 1) (+ i+0 5)) (+ i+0 2) (+ i+0 4)) (+ i+0 3) (+ i+0 3)) (+ i+0 4) (+ i+0 2)) Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ i+0 6)) Z) (Read_Int_Int a+0 Z)))",
    ],
}
